/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/unique_id.proto";

package sonardyne.api.port_lists.ethernet_port_list;

// EthernetPortListCommandRemovePort represents a command to remove an Ethernet port
// from a specific Ethernet port list. It includes the unique ID of the list and
// the unique ID of the port to be removed.
message EthernetPortListCommandRemovePort {
  sonardyne.api.common.UniqueID uid                   = 1;  // Unique ID of the ethernet port list.
  oneof ethernet_port_to_delete {
    sonardyne.api.common.UniqueID uid_to_delete       = 2;  // Unique ID of the ethernet port to remove.
    uint32 source_port_to_delete                      = 3;  // Source port of the ethernet port to remove.
  }
}
